--- a/python/Pandas.ipynb
+++ b/python/Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "112599bd",
+   "id": "1c11444f",
    "metadata": {},
    "source": [
     "데이터 불러왔을 때 한글 깨지는 경우:   encoding='cp949'"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "19376359",
+   "id": "8208dfc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f81716fd",
+   "id": "cf5a7d7a",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4f8cbd84",
+   "id": "1adac54b",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d9dafede",
+   "id": "6497924f",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "73d645fe",
+   "id": "137295d9",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "027dada8",
+   "id": "6f3e4db1",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "29633699",
+   "id": "805b9fef",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9cda1b1f",
+   "id": "02a6f479",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "22162aa2",
+   "id": "8f594f70",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "aba8614c",
+   "id": "8e15715b",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3a0c4721",
+   "id": "91f8b311",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d93511e6",
+   "id": "0f717b2a",
    "metadata": {},
    "source": [
     "## Date Frame 활용"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7ff67a01",
+   "id": "e5322e16",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a2d3112c",
+   "id": "d14bec5d",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "aa8a49c8",
+   "id": "1caf0e57",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f8c8a35",
+   "id": "d0fe5ed6",
    "metadata": {},
    "source": [
     "## 데이터 연산"
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9bd337c8",
+   "id": "5d43b710",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f2b60155",
+   "id": "53f4fdd1",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "42335249",
+   "id": "f376c885",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6c1b1e28",
+   "id": "a375d3c1",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9d6f5a28",
+   "id": "81477f5e",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "aadce3f8",
+   "id": "3810bc61",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9369908a",
+   "id": "1e9f215d",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a56d3f2e",
+   "id": "37fbc93a",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2643a06",
+   "id": "ba0cf24d",
    "metadata": {},
    "source": [
     "## 데이터 원하는 대로 선택"
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b3035f01",
+   "id": "85ba9392",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "9929cccb",
+   "id": "262fd368",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "ef052c64",
+   "id": "8a71eee5",
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2e825322",
+   "id": "a815c906",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "03d5291f",
+   "id": "6e927d7e",
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "45a3f877",
+   "id": "c4e6baea",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "8d16a2a3",
+   "id": "4ed6143d",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ba35be2f",
+   "id": "262b2c60",
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "3fee224d",
+   "id": "564d975b",
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "369bc2de",
+   "id": "75cbc36b",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e94cb035",
+   "id": "aacf9eae",
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2c26bc65",
+   "id": "cde46ab1",
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f68a8e7",
+   "id": "34728692",
    "metadata": {},
    "source": [
     "## 데이터 통합하기"
@@ -1714,7 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3ae6df74",
+   "id": "004e88b5",
    "metadata": {},
    "outputs": [
     {
@@ -1790,7 +1790,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f944139b",
+   "id": "8f5a6597",
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1855,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8c1ad363",
+   "id": "14edcea4",
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1940,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "79fce3f5",
+   "id": "d01d35f2",
    "metadata": {},
    "outputs": [
     {
@@ -2026,7 +2026,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "35b625c6",
+   "id": "6a4e7bb7",
    "metadata": {},
    "outputs": [
     {
@@ -2085,7 +2085,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9c5347fb",
+   "id": "76b023a9",
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2adb228c",
+   "id": "a6f4222c",
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2229,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "8979d7a9",
+   "id": "16326470",
    "metadata": {},
    "outputs": [
     {
@@ -2307,7 +2307,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a3828f33",
+   "id": "f32fb7d4",
    "metadata": {},
    "outputs": [
     {
@@ -2390,7 +2390,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c88bcfaa",
+   "id": "0c6e2915",
    "metadata": {},
    "outputs": [
     {
@@ -2471,7 +2471,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b04723ae",
+   "id": "c12d2c05",
    "metadata": {},
    "outputs": [
     {
@@ -2559,7 +2559,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d43a130b",
+   "id": "aa6752ca",
    "metadata": {},
    "outputs": [
     {
@@ -2627,7 +2627,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ee26fcd5",
+   "id": "39271bd5",
    "metadata": {},
    "outputs": [
     {
@@ -2695,7 +2695,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "75e15fb7",
+   "id": "2f32e140",
    "metadata": {},
    "outputs": [
     {
@@ -2766,7 +2766,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "9ca7f425",
+   "id": "70f1a802",
    "metadata": {},
    "outputs": [
     {
@@ -2837,7 +2837,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "6880ded9",
+   "id": "f3faf070",
    "metadata": {},
    "outputs": [
     {
@@ -2915,7 +2915,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "8af35cf4",
+   "id": "4822ae75",
    "metadata": {},
    "outputs": [
     {
@@ -2979,7 +2979,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "0546c475",
+   "id": "0a6e0153",
    "metadata": {},
    "outputs": [
     {
@@ -3076,7 +3076,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "95f56b06",
+   "id": "b7fa07c3",
    "metadata": {},
    "outputs": [
     {
@@ -3176,7 +3176,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e326e335",
+   "id": "77f69522",
    "metadata": {
     "scrolled": true
    },
@@ -3276,7 +3276,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "60cecb9f",
+   "id": "c93652a4",
    "metadata": {},
    "outputs": [
     {
@@ -3375,7 +3375,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b7e3b103",
+   "id": "c118522e",
    "metadata": {},
    "outputs": [
     {
@@ -3459,7 +3459,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "33ea6cad",
+   "id": "be2149b9",
    "metadata": {},
    "outputs": [
     {
@@ -3486,7 +3486,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "fd0ec9f8",
+   "id": "c67e3a24",
    "metadata": {
     "scrolled": true
    },
@@ -3574,7 +3574,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "1bed89f8",
+   "id": "d9949d97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3583,34 +3583,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "11458905",
+   "execution_count": 118,
+   "id": "72702782",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/dongwook/Desktop/TIL/python/save_DataFrame.csv not found\r\n"
+      "/Data/Users/dongwook/Desktop/TIL/python/save_DataFrame.csv not found\r\n"
      ]
     }
    ],
    "source": [
-    "!type /Users/dongwook/Desktop/TIL/python/save_DataFrame.csv"
+    "!type /Data/사용자/dongwook/Desktop/TIL/python/save_DataFrame.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "ffc4f5e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>BMI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ID_1</td>\n",
+       "      <td>62</td>\n",
+       "      <td>165</td>\n",
+       "      <td>22.773186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ID_2</td>\n",
+       "      <td>67</td>\n",
+       "      <td>177</td>\n",
+       "      <td>21.385936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ID_3</td>\n",
+       "      <td>55</td>\n",
+       "      <td>160</td>\n",
+       "      <td>21.484375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ID_4</td>\n",
+       "      <td>74</td>\n",
+       "      <td>180</td>\n",
+       "      <td>22.839506</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   User  Weight  Height        BMI\n",
+       "0  ID_1      62     165  22.773186\n",
+       "1  ID_2      67     177  21.385936\n",
+       "2  ID_3      55     160  21.484375\n",
+       "3  ID_4      74     180  22.839506"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('/Users/dongwook/Desktop/TIL/python/save_DataFrame.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "0717c4a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.path.exists('/Users/dongwook/Desktop/TIL/python/save_DataFrame.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df5df217",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24b71685",
+   "id": "ba5bef73",
    "metadata": {},
    "outputs": [],
    "source": []
