--- a/python/판다스공부/알고리즘.ipynb
+++ b/python/판다스공부/알고리즘.ipynb
@@ -183,7 +183,18 @@
    "id": "099a6ade",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "form collections import deque\n",
+    "n,m = map(int, input().split())\n",
+    "graph = []\n",
+    "for i in range(n):\n",
+    "    graph.append(list(map(int,input())))\n",
+    "\n",
+    "dx = [-1,1,0,0]\n",
+    "dy = [0,0,-1,1]\n",
+    "\n",
+    "print(bfs(0,0))"
+   ]
   },
   {
    "cell_type": "code",
@@ -212,9 +223,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -227,6 +237,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "interpreter": {
+   "hash": "3c39010337157f8f9b76e5c92d27c4ef06e55d99063a013adb54dfd9093da596"
   }
  },
  "nbformat": 4,
