210622|떡볶이문제

--- a/python/최적의 코딩을 위한 알고리즘.ipynb
+++ b/python/최적의 코딩을 위한 알고리즘.ipynb
@@ -163,20 +163,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9119055f",
+   "cell_type": "markdown",
+   "id": "f25cf6b0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 이진탐색 떡볶이 문제"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "efc7e56a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 6\n",
+      "19 18 6\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "n,m = list(map(int,input().split(' ')))\n",
+    "array = list(map(int, input().split()))\n",
+    "start = 0\n",
+    "end = max(array)\n",
+    "\n",
+    "result = 0\n",
+    "while(start <= end):\n",
+    "    total = 0\n",
+    "    mid = (start + end) // 2\n",
+    "    for x in array:\n",
+    "        if x > mid:\n",
+    "            total += x - mid\n",
+    "    if total < m:\n",
+    "        end = mid - 1\n",
+    "        \n",
+    "    else:\n",
+    "        result = mid\n",
+    "        start = mid + 1\n",
+    "        \n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "code",
