210623|곱하기더하기문제추가

--- a/python/판다스공부/알고리즘.ipynb
+++ b/python/판다스공부/알고리즘.ipynb
@@ -210,7 +210,17 @@
    "id": "103962b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = input()\n",
+    "result = int(data[0])\n",
+    "for i in range(1, len(data)):\n",
+    "    num = int(data[i])\n",
+    "    if num <= 1 or result <= 1:\n",
+    "        result += num\n",
+    "    else:\n",
+    "        result *= num\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "code",
