--- a/python/최적의 코딩을 위한 알고리즘.ipynb
+++ b/python/최적의 코딩을 위한 알고리즘.ipynb
@@ -211,19 +211,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c2b2a1e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 구간 합 빠르게 계산하기"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c2f62357",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "70\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "data = [10,20,30,40,50]\n",
+    "\n",
+    "sum_value = 0\n",
+    "prefix_sum = [0]\n",
+    "for i in data:\n",
+    "    sum_value += i\n",
+    "    prefix_sum.append(sum_value)\n",
+    "\n",
+    "left = 3\n",
+    "right =4\n",
+    "print(prefix_sum[right] - prefix_sum[left - 1])"
+   ]
   },
   {
    "cell_type": "code",
@@ -252,9 +275,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -267,6 +289,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "interpreter": {
+   "hash": "3c39010337157f8f9b76e5c92d27c4ef06e55d99063a013adb54dfd9093da596"
   }
  },
  "nbformat": 4,
