210625|수열합추가

--- a/python/최적의 코딩을 위한 알고리즘.ipynb
+++ b/python/최적의 코딩을 위한 알고리즘.ipynb
@@ -258,16 +258,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d2f5b19a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 특정합을 가지는 부분 연속 수열 찾기 문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "38fbe4f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5 # 데이터의 개수\n",
+    "m = 5 # 찾고자 하는 부분합\n",
+    "data = [1,2,3,4,5]\n",
+    "\n",
+    "count = 0\n",
+    "interval_sum = 0\n",
+    "end = 0\n",
+    "\n",
+    "for start in range(n):\n",
+    "    while interval_sum < m and end < n:\n",
+    "        end += 1\n",
+    "\n",
+    "    if interval_sum == m:\n",
+    "        count += 1\n",
+    "    interval_sum -= data[start]\n",
+    "\n",
+    "print(count)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38fbe4f5",
    "metadata": {},
    "outputs": [],
    "source": []
