--- a/python/최적의 코딩을 위한 알고리즘.ipynb
+++ b/python/최적의 코딩을 위한 알고리즘.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "38fbe4f5",
    "metadata": {},
    "outputs": [
@@ -276,14 +276,14 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0\n"
+      "3\n"
      ]
     }
    ],
    "source": [
     "n = 5 # 데이터의 개수\n",
     "m = 5 # 찾고자 하는 부분합\n",
-    "data = [1,2,3,4,5]\n",
+    "data = [1,2,3,2,5]\n",
     "\n",
     "count = 0\n",
     "interval_sum = 0\n",
@@ -291,6 +291,7 @@
     "\n",
     "for start in range(n):\n",
     "    while interval_sum < m and end < n:\n",
+    "        interval_sum += data[end]\n",
     "        end += 1\n",
     "\n",
     "    if interval_sum == m:\n",
@@ -299,6 +300,13 @@
     "\n",
     "print(count)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
