--- a/python/최적의 코딩을 위한 알고리즘.ipynb
+++ b/python/최적의 코딩을 위한 알고리즘.ipynb
@@ -306,6 +306,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "## 퀵정렬 소스코드: 파이썬의 장점을 살린 방식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [5,7,9,0,3,1,6,2,4,8,]\n",
+    "\n",
+    "def quick_sort(array):\n",
+    "    if len(array) <= 1:\n",
+    "        return array\n",
+    "    pivot = array[0]\n",
+    "    tail = array[1:]\n",
+    "\n",
+    "    left_side = [x for x in tail if x<= pivot]\n",
+    "    right_side = [x for x in tail if x > pivot]\n",
+    "    return quick_sort(left_side) + [pivot] + quick_sort(right_side)\n",
+    "\n",
+    "print(quick_sort(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
