--- a/python/최적의 코딩을 위한 알고리즘.ipynb
+++ b/python/최적의 코딩을 위한 알고리즘.ipynb
@@ -344,7 +344,80 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 바이너리 인덱스 트리 구현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "input = sys.stdin.readline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 3, got 0)",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-875e2718d9a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0minput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# 데이터의 개수 n, 변경횟수m, 구간합 계산 횟수k\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 3, got 0)"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "# 데이터의 개수 n, 변경횟수m, 구간합 계산 횟수k\n",
+    "n, m, k = map(int, input().split())\n",
+    "\n",
+    "\n",
+    "arr = [0] * (n + 1)\n",
+    "tree = [0] * (n - 1)\n",
+    "\n",
+    "def prefix_sum(i): # i번째 수까지의 누적 합을 계산하는 함수\n",
+    "    result = 0\n",
+    "    while i > 0:\n",
+    "        result += tree[i]\n",
+    "        # 0이 아닌 마지막 비트만큼 빼가면서 이동\n",
+    "        i -= (i & -i)\n",
+    "    return result\n",
+    "\n",
+    "# i번째 수를 dif 만큼 더하는 함수\n",
+    "def update(i, dif):\n",
+    "    while i <= n:\n",
+    "        tree[i] += dif\n",
+    "        i += (i & -i)\n",
+    "\n",
+    "# start부터 end까지의 구간 합을 계산하는 함수\n",
+    "def interval_sum(start, end):\n",
+    "    return prefix_sum(end) - prefix_sum(start - 1)\n",
+    "\n",
+    "for i in range(1, n + 1):\n",
+    "    x = int(input())\n",
+    "    arr[i] = x\n",
+    "    update(i,x)\n",
+    "\n",
+    "for i in range(m + k):\n",
+    "    a, b, c = map(int, input().split())\n",
+    "\n",
+    "    if a == 1:\n",
+    "        update(b, c - arr[b])\n",
+    "        arr[b] = c\n",
+    "    else:\n",
+    "        print(interval_sum(b,c))\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
