210628|동적금광문제추가

--- a/python/최적의 코딩을 위한 알고리즘.ipynb
+++ b/python/최적의 코딩을 위한 알고리즘.ipynb
@@ -424,6 +424,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "## 동적문제 금광\n",
+    "### 첫째줄에 테스트 케이스 T가 입력됩니다.(1<= T <= 1000)\n",
+    "### 매 데스트 케이스 첫째 줄에 n과 m이 공백으로 구분되어 입력된다. (1<=n,m<=20)\n",
+    "### 둘째 줄에 n X m개의 위치에 매장된 금의 개수가 공백으로 구분되어 입력된다 1이상 100이하의 수\n",
+    "### 출력조건: 테스트 케이스마다 채굴자가 얻을 수 있는 금의 최대 크기를 출력한다. 각 테스트 케이스는 줄 바꿈을 이용해 구분한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "19\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tc in range(int(input())):\n",
+    "    n,m = map(int, input().split())\n",
+    "    array = list(map(int, input().split()))\n",
+    "    dp = []\n",
+    "    index = 0\n",
+    "    for i in range(n):\n",
+    "        dp.append(array[index:index + m])\n",
+    "        index += m\n",
+    "    for j in range(1, m):\n",
+    "        if i == 0: left_up = 0\n",
+    "        else: left_up = dp[i - 1][j - 1]\n",
+    "        if i == n -1: left_down = 0\n",
+    "        else: left_down = dp[i+1][j-1]\n",
+    "        left = dp[i][j-1]\n",
+    "        dp[i][j] = dp[i][j] + max(left_up, left_down, left)\n",
+    "    result = 0\n",
+    "    for i in range(n):\n",
+    "        result = max(result, dp[i][m-1])\n",
+    "    print(result)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
