Colaboratory를 통해 생성됨

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -3,10 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled1.ipynb",
+      "name": "Titanic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNG4vijzLtWWzV+lzolbY+o",
-      "include_colab_link": true
+      "collapsed_sections": [],
+      "mount_file_id": "1J98N5ttwbNF0qZgav8eYCCe7NWFrMvGw",
+      "authorship_tag": "ABX9TyPxZcgB1tNaCY7OIy4PFwb7"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,21 +19,11 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/cabbi120101/TIL/blob/master/Titanic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 391
+          "height": 530
         },
         "id": "OGqnes8bZupZ",
         "outputId": "274b14bc-3170-4574-b56b-eeb31b4d9e6f"
@@ -47,7 +38,7 @@
         "df = pd.read_csv('https://web.stanford.edu/class/archive/cs/cs109/cs109.1166/stuff/titanic.csv')\n",
         "df.head()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +162,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +200,7 @@
         "ages = df[\"Age\"]\n",
         "ages.head()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -242,7 +233,7 @@
       "source": [
         "df[\"Age\"].shape"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -264,32 +255,97 @@
         "id": "8jDpD88ZaSXC"
       },
       "source": [
-        ""
+        "age_sex = df[[\"Age\", \"Sex\"]]"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Nzagxg9saZD6"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "lJX-Bmy7b3RY",
+        "outputId": "21745364-098c-42c9-d5b3-71626f8867e9"
       },
       "source": [
-        ""
+        "age_sex.head()"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mYScY6fTaZBO"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Sex</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>22.0</td>\n",
+              "      <td>male</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>38.0</td>\n",
+              "      <td>female</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>26.0</td>\n",
+              "      <td>female</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>35.0</td>\n",
+              "      <td>female</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>35.0</td>\n",
+              "      <td>male</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Age     Sex\n",
+              "0  22.0    male\n",
+              "1  38.0  female\n",
+              "2  26.0  female\n",
+              "3  35.0  female\n",
+              "4  35.0    male"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -297,21 +353,169 @@
         "id": "zWmXZ0W4aY-z"
       },
       "source": [
-        ""
+        "above_35 = df[df[\"Age\"]>35]"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g71wSW8JaY8T"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "OyueToZdcI1K",
+        "outputId": "30f1db9c-2091-4160-b798-be057d9b8459"
       },
       "source": [
-        ""
+        "above_35.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Survived</th>\n",
+              "      <th>Pclass</th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Sex</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Siblings/Spouses Aboard</th>\n",
+              "      <th>Parents/Children Aboard</th>\n",
+              "      <th>Fare</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Mrs. John Bradley (Florence Briggs Thayer) Cum...</td>\n",
+              "      <td>female</td>\n",
+              "      <td>38.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>71.2833</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Mr. Timothy J McCarthy</td>\n",
+              "      <td>male</td>\n",
+              "      <td>54.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>51.8625</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Miss. Elizabeth Bonnell</td>\n",
+              "      <td>female</td>\n",
+              "      <td>58.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>26.5500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Mr. Anders Johan Andersson</td>\n",
+              "      <td>male</td>\n",
+              "      <td>39.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>31.2750</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Mrs. (Mary D Kingcome) Hewlett</td>\n",
+              "      <td>female</td>\n",
+              "      <td>55.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>16.0000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Survived  Pclass  ... Parents/Children Aboard     Fare\n",
+              "1          1       1  ...                       0  71.2833\n",
+              "6          0       1  ...                       0  51.8625\n",
+              "11         1       1  ...                       0  26.5500\n",
+              "13         0       3  ...                       5  31.2750\n",
+              "15         1       2  ...                       0  16.0000\n",
+              "\n",
+              "[5 rows x 8 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g71wSW8JaY8T",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9460aa9c-ab27-42e5-b78b-ce223bc0e0a9"
+      },
+      "source": [
+        "adult_names = df.loc[df[\"Age\"]>35, \"Name\"]\n",
+        "adult_names.head()"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1     Mrs. John Bradley (Florence Briggs Thayer) Cum...\n",
+              "6                                Mr. Timothy J McCarthy\n",
+              "11                              Miss. Elizabeth Bonnell\n",
+              "13                           Mr. Anders Johan Andersson\n",
+              "15                       Mrs. (Mary D Kingcome) Hewlett\n",
+              "Name: Name, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
