원하는 데이터 이쁘게 뽑기 해봄

--- a/동네날씨.ipynb
+++ b/동네날씨.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "10wmrcK7p4bSB6PNws34x90Vw-22x15Ad",
-      "authorship_tag": "ABX9TyOTIQEGmmXzS8cOWpiLBtwV"
+      "authorship_tag": "ABX9TyP5KsoJNAPvJSKyiN/MO+uL"
     },
     "kernelspec": {
       "name": "python3",
@@ -148,15 +148,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sy1LeorVtulP"
+        "id": "sy1LeorVtulP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3dfccc12-593e-446e-95c8-7a9afaad0159"
       },
       "source": [
         "items = dict_data['response']['body']['items']['item']\n",
-        "df = pd.DataFrame(items)\n",
-        "df.to_csv('/content/drive/MyDrive/동네날씨.csv', index = False)"
+        "# df = pd.DataFrame(items)\n",
+        "# df.to_csv('/content/drive/MyDrive/동네날씨.csv', index = False)\n",
+        "\n",
+        "print('[ 발표 날짜: {} ]'.format(items[0]['baseDate']))\n",
+        "print('[ 발표 시간: {} ]'.format(items[0]['baseTime']))\n",
+        "\n",
+        "for k in range(len(items)):\n",
+        "    item = items[k]\n",
+        "    obsrValue = item['obsrValue']\n",
+        "    if (item['category']=='T1H'):\n",
+        "        print('* 기온: {} [℃]'.format(obsrValue))\n",
+        "    elif (item['category']=='REH'):\n",
+        "        print('* 습도: {} [%]'.format(obsrValue))\n",
+        "    elif (item['category']=='RN1'):\n",
+        "        print('* 1시간 강수량: {} [mm]'.format(obsrValue))"
       ],
-      "execution_count": 5,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 발표 날짜: 20210704 ]\n",
+            "[ 발표 시간: 1000 ]\n",
+            "* 습도: 98 [%]\n",
+            "* 1시간 강수량: 0.2 [mm]\n",
+            "* 기온: 22.3 [℃]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
